--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi~=0.104.1
-uvicorn~=0.23.2
-jinja2~=3.1.2
-python-multipart~=0.0.6
-alembic~=1.12.1
-sqlalchemy~=2.0.23
+fastapi>=0.105.0
+uvicorn>=0.23.2
+jinja2>=3.1.2
+python-multipart>=0.0.6
+alembic>=1.13.1
+sqlalchemy>=2.0.23
