--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ alembic>=1.13.1
 sqlalchemy>=2.0.23
 sqladmin>=0.16.0
 returns>=0.22.0
+loguru>=0.7.2
+aiosqlite>=0.20.0
+fastapi_users>=12.1.3
+greenlet>=3.0.3
